--- a/DraftStyle.css
+++ b/DraftStyle.css
@@ -2,7 +2,7 @@ body {
 	margin: 0;
 	height: 100%;
 	overflow: hidden;
-	font-family: 'Courier', 'Lucida Console', monospace;
+	font-family: 'Courier New', monospace;
 	background: silver;
 }
 input {
@@ -39,7 +39,7 @@ button {
     font-size: 1.2em;
     font-weight: bold;
     background-color: #EEE;
-    border: 1px solid black;
+    border: 3px solid gray;
     border-radius: 5px;
 }
 ul {
@@ -63,7 +63,7 @@ li {
 	left: 50px;
 	top: 50px;
 	padding: 5px;
-	border: 3px solid #666;
+	border: 5px solid gray;
 	border-radius: 10px;
 	display: none;
 	color: black;
@@ -158,7 +158,7 @@ li {
     width: 32px;
     border: none;
     border-radius: 3px;
-    background-color: #ffffff80;
+    background-color: #ffffffC0;
     display: block;
     z-index: 10;
 }
@@ -169,7 +169,7 @@ li {
     width: 32px;
     border: none;
     border-radius: 3px;
-    background-color: #ffffff80;
+    background-color: #ffffffC0;
     display: none;
     z-index: 11;
 }
@@ -178,10 +178,11 @@ li {
     top: -30px;
     left: 48px;
     right: 0;
+    width: 400px;
     height: 30px;
     font-size: 1em;
     color: black;
-    background-color: #ffffff80;
+    background-color: #ffffffC0;
     z-index: 10;
     display: block;
     overflow: hidden;
