--- a/DraftStyle.css
+++ b/DraftStyle.css
@@ -6,15 +6,15 @@ body {
 	background: silver;
 }
 input {
-    width: 64px;
-	height: 24px;
+    width: 75px;
+	height: 22px;
 	color: black;
 	background-color: white;
 	opacity: 0.5;
 	border: 1px solid gray;
 	padding: 0;
-	margin: 1px;
-	font-size: 1.2em;
+	margin: 4px;
+	font-size: 1.0em;
 }
 textarea {
 	padding: 5px;
@@ -58,6 +58,9 @@ li {
 .iconButton:disabled {
     opacity: 0.5;
 }
+.info {
+	margin-top: 8px;
+}
 .dialog {
 	position: fixed;
 	left: 0;
@@ -66,7 +69,7 @@ li {
 	border: none;
 	display: none;
 	color: black;
-	background-color: #FFFFFFC0;
+	background-color: #FFFFFFEE;
     box-shadow: 0 0 4px #88888888;
 	/* opacity: 0.9; */
 	z-index: 15;
@@ -79,11 +82,6 @@ li {
 	float: right;
 	background-color: white;
 	background-image: url('svg/clear.svg');
-}
-.layerChooser {
-	margin: 0 5px 0 0;
-	width: 16px;
-	height: 16px;
 }
 .layerCheck {
 	width: 16px;
@@ -149,7 +147,7 @@ li {
     width: 32px;
     border: none;
     border-radius: 3px;
-    background-color: #FFFFFFC0;
+    background-color: #FFFFFFEE;
     box-shadow: 0 0 4px #88888888;
     display: block;
     z-index: 10;
@@ -161,20 +159,20 @@ li {
     width: 32px;
     border: none;
     border-radius: 3px;
-    background-color: #FFFFFFC0;
+    background-color: #FFFFFFEE;
     box-shadow: 0 0 4px #88888888;
     display: none;
     z-index: 11;
 }
 #info {
     position: fixed;
-    top: -30px;
+    top: -32px;
     left: 32px;
     height: 30px;
     padding: 4px;
     font-size: 1em;
     color: black;
-    background-color: #FFFFFFC0;
+    background-color: #FFFFFFEE;
     box-shadow: 0 0 4px #88888888;
     z-index: 13;
     display: flex;
@@ -187,15 +185,13 @@ li {
 	left: 4px;
 	display: inline-block;
 	white-space: nowrap;
-	padding-left: 50%;
-	animation: marquee 10s linear infinite;
+	padding-left: 25%;
+	animation: marquee 10s linear 2s infinite;
 }
-
 @keyframes marquee {
-	0% {transform: translateX(0);}
-	100% {transform: translateX(-100%);}
+	from {transform: translateX(0);}
+	to {transform: translateX(-100%);}
 }
-
 #style {
 	position: fixed;
 	top:0;
@@ -242,6 +238,12 @@ li {
 }
 #layersButton {
 	background: url(svg/layers.svg) center center no-repeat;
+}
+#layerChoice {
+	width: 100px;
+}
+#layerChoice li {
+	display: flex;
 }
 #docButton {
     background: url(svg/document.svg) center center no-repeat;
