--- a/DraftStyle.css
+++ b/DraftStyle.css
@@ -48,6 +48,13 @@ li {
 	list-style-type: none;
 	margins: 5px 5px 0 5px;
 }
+a{
+	color: black;
+	text-decoration: none;
+    font-size: 1.2em;
+    font-weight: bold;
+    padding-left: 5px;
+}
 .iconButton {
     width: 32px;
     height: 32px;
@@ -57,6 +64,7 @@ li {
 .iconButton:disabled {
     opacity: 0.5;
 }
+/*
 .menuButton {
 	width: 32px;
 	height: 12px;
@@ -64,6 +72,7 @@ li {
 	color: white;
 	background: url(svg/more.svg) center center no-repeat;
 }
+*/
 .info {
 	margin-top: 8px;
 }
@@ -78,6 +87,18 @@ li {
 	color: black;
 	background-color: #FFFFFFEE;
     /* box-shadow: 0 0 4px #88888888; */
+	z-index: 15;
+}
+.dialogRight {
+	position: fixed;
+	right: 5px;
+	top: 5px;
+	padding: 5px;
+	border: solid gray 2px;
+	border-radius: 5px;
+	display: none;
+	color: black;
+	background-color: #FFFFFFEE;
 	z-index: 15;
 }
 .clearButton {
@@ -203,6 +224,7 @@ li {
 	left: 0;
 	width: 32px;
 	height: 32px;
+	border: none;
 	background-color: #FFFFFFC0;
     /* box-shadow: 0 0 4px #88888888; */
     z-index: 12;
@@ -217,6 +239,16 @@ li {
 	border-width: 0.25mm;
 	border-color: black;
 	background: none;
+}
+#moreButton {
+	position: fixed;
+	top: 4px;
+	right: 4px;
+	width: 32px;
+	height: 32px;
+	border: none;
+	background-color: #FFFFFFC0;
+	background: url(svg/more.svg) center center no-repeat;
 }
 #guides {
     display: none;
