--- a/DraftStyle.css
+++ b/DraftStyle.css
@@ -39,9 +39,10 @@ button {
     font-family: monospace;
     font-size: 1.2em;
     font-weight: bold;
+    border: solid black 2px;
+    border-width: 2px;
     border-radius: 3px;
-    background: #EEE;
-    border: none;
+    background: white;
 }
 ul {
 	padding: 0;
@@ -120,7 +121,7 @@ a{
 .setChoice {
 	width: 16px;
 	height: 16px;
-	float: right;
+	/*float: right;*/
 }
 .spin90 {
     transform: rotate(90deg);
@@ -188,14 +189,22 @@ a{
     top: -32px;
     left: 32px;
     height: 30px;
-    min-width: 200px;
+	width: 100%;
     padding: 4px;
     font-size: 1em;
     color: black;
     background-color: #FFFFFFEE;
     z-index: 13;
-    display: flex;
+    display: block;
     overflow: hidden;
+}
+#sizes {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 30px;
+	display: flex;
 }
 #hint {
 	position: absolute;
@@ -241,6 +250,9 @@ a{
 	border: none;
 	background-color: #FFFFFFC0;
 	background: url(svg/more.svg) center center no-repeat;
+}
+#moreDialog button {
+	border: none;
 }
 #guides {
     display: none;
